--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -75,7 +75,7 @@
 <div id="rflheader" class="flex-container">
 <div  id="mysidenav" class="sidenav" >
 
-<div class="container"><img id="snavimg" src="Images/snavimg.jpg"> <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:500;background-color: orangered">Welcome To RaffleBucks!</span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#"" >Login/Register</a></div>  </div>
+<div class="container"><img id="snavimg" src="Images/snavimg.jpg"> <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:500;background-color: orangered">Welcome To RaffleBucks!</span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login/Register</a></div>  </div>
 <div style="background-color: white;padding-bottom:5px">
  <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">Shop By Category</h3>
   <a href="#"> <svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>&nbsp; All Categories</a>
@@ -109,7 +109,7 @@
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg><span>&nbsp; My Prizes</span></a>
   <a href="#"><svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg><span>&nbsp; My Alerts</span></a>
 </div>
-<div style="border-top:1px solid orangered;background-color: white;padding-top:0px;padding-bottom:10px; margin-top: 0px">
+<div style="border-top:1px solid orangered;background-color: white;padding-top:0px;padding-bottom:50px; margin-top: 0px">
   <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">More Options</h3>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg><span>&nbsp; Help & Support</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg><span>&nbsp; Sell On RaffleBucks</span></a>
@@ -122,15 +122,16 @@
 
 <!-- SEARCH BAR -->
 
-<div class="wrap">
-    <div class="search">
+<div id="wrap">
+    <div id="search">
        <input type="text" class="searchTerm" placeholder="Search For Products, Lotteries, Contests & More...">
        <button type="submit" class="searchButton">
          <i class="fa fa-search"></i>
       </button>
     </div>
  </div>
-</div>
+ </div>
+
 
 <!--OPTIONS : USER,CART,ALERTS AND MORE OPTIONS-->
 <div id="headopt">
@@ -173,7 +174,6 @@
 <!--THIS SECTION IS FOR THE SEARCH BAR IN MOBILE AND TABLETS /  NAVIGATION IN DESKTOP-->
 
 <div class="flex-container" id="rflnav">
-
   <div id="wrap1">
     <div id="searchmob">
        <input type="text" id="searchTermmob" placeholder="Search For Products, Lotteries, Contests & More...">
@@ -182,9 +182,6 @@
       </button>
     </div>
  </div>
-
-
-  
 </div>
 
 <div class="flex-container" id="rflnav1" >
@@ -477,8 +474,9 @@
     </div>
 <!--THIS IS FOR THE SLIDESHOW-->
 
-
-<div class="slideshow-container ">
+<div style="position: absolute;top: 90px;width: 100%;z-index:-1000;">
+<div class="slideshow-container" >
+<div class="containers">
 <div class="mySlides fade">
 <img src="images/slide6.png">
 </div>
@@ -494,8 +492,9 @@
       <div class="mySlides fade">
         <img src="images/slide5.png">
       </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <a  onclick="plusSlides(-1)">  <div class="prev">&#10094;</div></a>
+<a  onclick="plusSlides(1)"><div class="next">&#10095;</div></a>
+</div>
 <div id="dotsty"> 
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span> 
@@ -504,7 +503,8 @@
   <span class="dot" onclick="currentSlide(5)"></span>
    </div>
 </div>
-<div class="slideshow-container1" style="margin-top: 400px;">
+<div class="slideshow-container1" > 
+  <div class="containers">
   <div class="mySlides1 fade1">
     <img src="images/lotto4.png">
     </div>
@@ -514,18 +514,18 @@
       <div class="mySlides1 fade1">
         <img src="images/lotto9.jpg">
         </div>
-        <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides1(1)">&#10095;</a>
+        <a  onclick="plusSlides1(-1)"><div class="prev">&#10094;</div></a>
+        <a  onclick="plusSlides1(1)"><div class="next">&#10095;</div></a>
+  </div>
 <div id="dotsty1"> 
   <span class="dot" onclick="currentSlide1(1)"></span> 
   <span class="dot" onclick="currentSlide1(2)"></span> 
   <span class="dot" onclick="currentSlide1(3)"></span>
-
+  <span class="dot" onclick="currentSlide1(4)"></span> 
+  <span class="dot" onclick="currentSlide1(5)"></span>
    </div>
 </div>
-
-
-
+</div>
 
 
 <script src="JS/Header.js"></script>
