COMMITITNG TILL THE LOGIN PAGE

--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -122,17 +122,15 @@
 
 <!-- SEARCH BAR -->
 
-<div id="wrap">
-    <div id="search">
-       <input type="text" class="searchTerm" placeholder="Search For Products, Lotteries, Contests & More...">
-       <button type="submit" class="searchButton">
-         <i class="fa fa-search"></i>
-      </button>
-    </div>
- </div>
- </div>
-
-
+<div class="wrap">
+  <div class="search">
+     <input type="text" class="searchTerm" placeholder="What are you looking for?">
+     <button type="submit" class="searchButton">
+       <i class="fa fa-search"></i>
+    </button>
+  </div>
+</div>
+</div>
 <!--OPTIONS : USER,CART,ALERTS AND MORE OPTIONS-->
 <div id="headopt">
 <div class="tooltip" id="pos">
