--- a/Pages with Home page/Sign Up Page/Signup.html
+++ b/Pages with Home page/Sign Up Page/Signup.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="Signup.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body >
@@ -12,15 +13,17 @@
 	  
 	<div class="center">
 <div id="login-container" style="background-color: white">
-	<form action="" method="POST">
+
+	<form method="POST" id="myform">
 <div id="logo" style="text-align: center;"><img src="Rfllogo.png"></div>
 <div id="login-head"  class="center"><h2>Sign Up</h2></div>
 
- <div style="margin-left:10%;margin-top: 0px;"><svg style="margin-bottom: -4px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-<input type="text" style="margin-top: 0px;margin-left: 0%;" placeholder="Enter Email ID"  required></div>
+ <div  style="margin-left:10%;margin-top: 0px;" ><svg id="emailsvg"  style="margin-bottom: -4px;transition-duration:.3s;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+<input  type="text" name="email" id="email" style="margin-top: 0px;margin-left: 0%;" placeholder="Enter Email ID"  required><label id="lbltxt" style="color: red;font-size: 18px;margin-left: 24px;text-decoration-line: underline;"></label>
+</div>
 <br>
-<div style="margin-left:10%"><svg style="margin-bottom: -4px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
-<input type="password" style="margin-top: 0px;margin-left: 0%;" placeholder="Enter Password" minlength="6" required>
+<div style="margin-left:10%" ><svg id="pass" style="margin-bottom: -4px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+<input id="password" type="password" style="margin-top: 0px;margin-left: 0%;" placeholder="Enter Password" minlength="6" required>
 </div>
 <br>
 
@@ -31,7 +34,7 @@
 
 <br>
 <div id="loginbutton">
-<button type="submit">Sign Up</button>
+<button type="submit" onclick="validate()">Sign Up</button>
 </div>
 
 <div class="vl">
@@ -54,10 +57,14 @@
 
 
 </form>
+<div id="correct" style="color:gray;"></div>
 <div id="newacc">
 <span>Already have an account?</span> <a href="#"> Login</a>
 </div>
 </div>
 </div>
+
+
+<script src="Signup.js"></script>
 </body>
 </html>
