--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -65,7 +65,7 @@
 <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
    
 </head> 
 <body >
@@ -135,8 +135,8 @@
  </a></div>
  <div class="tooltipopt">
     <div class="verticalmenu" id="vtw">
-   <a href="Pages with Home page/Login Page/Login.html"><svg  style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg><span>&nbsp; Login</span></a>
-  <a href="Pages with Home page/Sign Up Page/Signup.html"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg><span>&nbsp; Create Account</span></a>
+   <a href="/Pages with Home page/Login Page/"><svg  style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg><span>&nbsp; Login</span></a>
+  <a href=""><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg><span>&nbsp; Create Account</span></a>
   <a href="#"><i class="fas fa-wallet"></i><span>&nbsp; My Bucks</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg><span>&nbsp; My Wishlist</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg><span>&nbsp; My Orders</span></a>
@@ -472,28 +472,17 @@
 <div class="slideshow-container" >
 <div class="containers">
 
-<div class="mySlides fade">
-  <img src="images/slide2.png">
-  </div>
-  
-    <div class="mySlides fade">
-      <img src="images/slide3.png">
+
+      <div class="mySlides fade">
+        <img src="images/slide7.png">
       </div>
       <div class="mySlides fade">
-        <img src="images/slide1.png">
+        <img src="images/slide20.png">
       </div>
       <div class="mySlides fade">
-        <img src="images/slide5.png">
+        <img src="images/slide30.png">
       </div>
-      <div class="mySlides fade">
-        <img src="images/slide6.png">
-      </div>
-      <div class="mySlides fade">
-        <img src="images/slide8.png">
-      </div>
-      <div class="mySlides fade">
-        <img src="images/slide9.png">
-      </div>
+     
       <a  onclick="plusSlides(-1)">  <div class="prev">&#10094;</div></a>
 <a  onclick="plusSlides(1)"><div class="next">&#10095;</div></a>
 </div>
@@ -521,19 +510,89 @@
 </div>
 
 </section>
+<div class="catebox">
+  <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">BEST OFFERS FOR YOU</h1></div>
+  <div class="imgbox1"> 
+  <div> <a href="#"><img src="images/newcus.jfif"></a></div>
+  <div> <a href="#"><img src="images/offer.jfif"></a></div>
+  <div> <a href="#"><img src="images/offer.jfif"></a></div>
+  <div> <a href="#"><img src="images/newcus.jfif"></a></div>
+  </div>
+  </div>
+
 <div class="banner"><a href="#"><img src="images/dis.png"></a></div>
 <div class="catebox">
-<div class="dealtitle"><h1 style="border-bottom: 2px solid black;">MALAMAAL DEALS</h1></div>
-<div class="imgbox"> 
- <a href="#"><img src="images/MOBILE/AUDIO.png"></a>
- <a href="#"><img src="images/MOBILE/SMARTWATCH.png"></a>
- <a href="#"><img src="images/MOBILE/LAPTOPS.png"></a>
- <a href="#"><img src="images/MOBILE/HEADPHONES.png"></a>
+<div class="dealtitle"><h1 style="border-bottom: 2px solid black;">MALAMAAL DEALS</h1>
+  <p id="timer"></p>
+ <div class="status">
+  <h1 class="ml15 ">
+    <span class="word">Live</span>
+    <span class="word">Now!</span>
+  </h1>
+  </div>
 </div>
+<div class="imgbox"> 
+<div> <a href="#"><img src="images/MOBILE/SHOESS.png"></a></div>
+<div> <a href="#"><img src="images/MOBILE/SMARTWATCH.png"></a></div>
+<div> <a href="#"><img src="images/MOBILE/LAPTOPS.png"></a></div>
+<div> <a href="#"><img src="images/MOBILE/MENS.png"></a></div>
 </div>
 
+</div>
+
+<div class="catebox">
+  <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">TRENDING FASHION DEALS</h1>
+    <div class="status">
+      <h1 class="ml15 ">
+        <span class="word">Live</span>
+        <span class="word">Now!</span>
+      </h1>
+      </div></div>
+  
+  <div class="imgbox"> 
+  <div> <a href="#"><img src="images/FASHION/puma.png"></a></div>
+  <div> <a href="#"><img src="images/FASHION/rayban.png"></a></div>
+  <div> <a href="#"><img src="images/FASHION/titan.png"></a></div>
+  <div> <a href="#"><img src="images/FASHION/sykar.png"></a></div>
+  </div>
+  </div>
+  <div class="banner"><a href="#"><img src="images/lotto6.jpg"></a></div>
+  <div class="catebox">
+    <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">SMARTPHONES KI SMART DEALS</h1>
+      <div class="status">
+        <h1 class="ml17 ">
+          <span class="word">Live</span>
+          <span class="word">Now!</span>
+        </h1>
+        </div></div>
+    
+    <div class="imgbox"> 
+    <div> <a href="#"><img src="images/MOBILE/MOBILE1.png"></a></div>
+    <div> <a href="#"><img src="images/MOBILE/MOBILE2.png"></a></div>
+    <div> <a href="#"><img src="images/MOBILE/MOBILE2.png"></a></div>
+    <div> <a href="#"><img src="images/MOBILE/MOBILE1.png"></a></div>
+    </div>
+    </div>
+    <div class="catebox">
+      <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">MID-NIGHT DEALS</h1></div>
+      <div class="status">
+        <h1 class="ml16">
+          <span class="word">Coming</span>
+          <span class="word">Soon!</span>
+        </h1>
+        </div>
+      <div class="imgbox"> 
+      <div> <a href="#"><img src="images/smartphones1.png"></a></div>
+      <div> <a href="#"><img src="images/speaker1.png"></a></div>
+      <div> <a href="#"><img src="images/smartwatches.png"></a></div>
+      <div> <a href="#"><img src="images/tablets.png"></a></div>
+      </div>
+      </div>
+      <div class="banner"><a href="#"><img src="images/lotto9.jpg"></a></div>
 <script src="JS/Header.js"></script>
 <script src="JS/Slideshow.js"></script>
+<script src="JS/midsec.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 </body>
 
 </html>
