THIS IS DONE BEFORE THE FOOTER

--- a/Pages with Home page/Sign Up Page/Signup.html
+++ b/Pages with Home page/Sign Up Page/Signup.html
@@ -59,7 +59,7 @@
 </form>
 <div id="correct" style="color:gray;"></div>
 <div id="newacc">
-<span>Already have an account?</span> <a href="#"> Login</a>
+<span>Already have an account?</span> <a href="/Raffle_Bucks/Pages with Home page/Login Page/Login.html"> Login</a>
 </div>
 </div>
 </div>
