--- a/RB GAMING ZONE/GameZone.html
+++ b/RB GAMING ZONE/GameZone.html
@@ -53,9 +53,9 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
 
 <!--CSS FILES-->
-<link rel="stylesheet" href="/CSS/Header.css">
-<link rel="stylesheet" href="/CSS/Slideshow.css ">
-<link rel="stylesheet" href="/CSS/Winnersection.css">
+<link rel="stylesheet" href="CSS/Header.css">
+<link rel="stylesheet" href="CSS/Slideshow.css ">
+<link rel="stylesheet" href="CSS/Winnersection.css">
 
 <!--CDN's-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -78,8 +78,8 @@
 <div style="background-image: linear-gradient(to right,#667eea,#764ba2);padding-bottom:5px">
  <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Shop By Category</h3>
 <!--   <a href="#"> <svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>&nbsp; All Categories</a> -->
-  <a href="/images/battles.png"><i class="fas fa-tshirt" style="margin-bottom: 1px;font-size:14px"  ></i>&nbsp;  Fashion</a>
-  <a href="/CSS/Slideshow.css"><i class="fas fa-mobile" style="margin-left:4px;margin-bottom: 1px;font-size:14px"></i>&nbsp; &nbsp;Mobiles & Accessories</a>
+  <a href="#"><i class="fas fa-tshirt" style="margin-bottom: 1px;font-size:14px"  ></i>&nbsp;  Fashion</a>
+  <a href=""><i class="fas fa-mobile" style="margin-left:4px;margin-bottom: 1px;font-size:14px"></i>&nbsp; &nbsp;Mobiles & Accessories</a>
   <a href="#"><i class="fas fa-tv" style="margin-bottom: 1px;font-size:14px"></i> &nbsp;Electronics</a>
   <a href="#"><i class="fas fa-couch" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Home & Furniture</a>
   <a href="#"><i class="fas fa-biking" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Sports,Fitness & More..</a> 
@@ -88,7 +88,6 @@
   <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black;">Games & Quizzes</h3>
   <a href="#"><i class="fas fa-gamepad" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; RB GAME ZONE</a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>&nbsp;  RB QUIZ ZONE</a>
-  
 </div>
     
 
@@ -470,19 +469,19 @@
 
 
       <div class="mySlides fade">
-        <img src="/images/battles.png">
+        <img src="images/pics/battles.png">
       </div>
       <div class="mySlides fade">
-        <img src="/images/battles.png">
+        <img src="images/pics/battles.png">
       </div>
       <div class="mySlides fade">
-        <img src=" /images/battles.png">
+        <img src=" images/pics/battles.png">
       </div>
       <div class="mySlides fade">
-        <img src=" /images/battles.png">
+        <img src=" images/pics/battles.png">
       </div>
       <div class="mySlides fade">
-        <img src="/images/battles.png">
+        <img src="images/pics/battles.png">
       </div>
       <a  onclick="plusSlides(-1)">  <div class="prev">&#10094;</div></a>
 <a  onclick="plusSlides(1)"><div class="next">&#10095;</div></a>
