--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -69,30 +69,27 @@
 </head> 
 <body >
 <div id="rflheader" class="flex-container">
-<div  id="mysidenav" class="sidenav" >
-<div class="container"> <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:500;background-color: transparent">Welcome To RaffleBucks!</span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login/Register</a></div>  </div>
-<div style="background-color: white;padding-bottom:5px">
- <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">Shop By Category</h3>
-  <a href="#"> <svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>&nbsp; All Categories</a>
+<div  id="sidenav" class="sidenav" >
+<div class="container"> <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:600;background-color: transparent">Welcome To RaffleBucks!</span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login/Register</a></div>  </div>
+<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);;padding-bottom:5px">
+ <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Shop By Category</h3>
+ <!-- <a href="#"> <svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>&nbsp; All Categories</a> -->
   <a href="#"><i class="fas fa-tshirt" style="margin-bottom: 1px;font-size:14px"  ></i>&nbsp;  Fashion</a>
   <a href="#"><i class="fas fa-mobile" style="margin-left:4px;margin-bottom: 1px;font-size:14px"></i>&nbsp; &nbsp;Mobiles & Accessories</a>
   <a href="#"><i class="fas fa-tv" style="margin-bottom: 1px;font-size:14px"></i> &nbsp;Electronics & Home Appliances</a>
   <a href="#"><i class="fas fa-couch" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Home & Furniture</a>
   <a href="#"><i class="fas fa-biking" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Sports,Fitness & More..</a> 
 </div>
-<div style="border-top:1px solid orangered;background-color: white;padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
-  <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">Contests & Quizzes</h3>
-  <a href="#">Daily Contests & Quizzes</a>
-  <a href="#">Weekly Contests & Quizzes</a>
-  <a href="#">Monthly Contests & Quizzes</a>
-  <a href="#">Yearly Contests & Quizzes</a>
-  <a href="#">Special Contests & Quizzes</a>
+<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
+  <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Contests & Quizzes</h3>
+  <a href="#"><i class="fas fa-gamepad" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; RB GAME ZONE</a>
+  <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>&nbsp;  RB QUIZ ZONE</a>
 </div>
     
 
 
-<div style="border-top:1px solid orangered;background-color: white;padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
- <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">Profile</h3>
+<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
+ <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Profile</h3>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg><span>&nbsp; My Account</span></a>
   <a href="#"><i class="fas fa-wallet"></i><span>&nbsp; My Bucks</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg><span>&nbsp; My Wishlist</span></a>
@@ -103,8 +100,8 @@
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg><span>&nbsp; My Prizes</span></a>
   <a href="#"><svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg><span>&nbsp; My Alerts</span></a>
 </div>
-<div style="border-top:1px solid orangered;background-color: white;padding-top:0px;padding-bottom:50px; margin-top: 0px">
-  <h3 style="text-align:center;margin-top:0px;position:relative;top:10px;">More Options</h3>
+<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:50px; margin-top: 0px">
+  <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">More Options</h3>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg><span>&nbsp; Help & Support</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg><span>&nbsp; Sell On RaffleBucks</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg><span>&nbsp; Download App</span></a>
@@ -133,8 +130,8 @@
  </a></div>
  <div class="tooltipopt">
     <div class="verticalmenu" id="vtw">
-   <a href="/Pages with Home page/Login Page/Login.html"><svg  style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg><span>&nbsp; Login</span></a>
-  <a href="/Pages with Home page/Sign Up Page/Signup.html"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg><span>&nbsp; Create Account</span></a>
+   <a href="/Raffle_Bucks/Pages with Home page/Login Page/Login.html"><svg  style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg><span>&nbsp; Login</span></a>
+  <a href="/Raffle_Bucks/Pages with Home page/Sign Up Page/Signup.html"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg><span>&nbsp; Create Account</span></a>
   <a href="#"><i class="fas fa-wallet"></i><span>&nbsp; My Bucks</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg><span>&nbsp; My Wishlist</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg><span>&nbsp; My Orders</span></a>
@@ -497,7 +494,6 @@
   <span class="dot" onclick="currentSlide(5)"></span>
    </div>
 </div>
-
 <!--THIS SECTION IS FOR SHOWING HIGHLIGHTS-->
 
 <section>
@@ -509,13 +505,11 @@
   <button id="grab" type="button">Play Now!</button>
 </div>
 <div id="winner-card"></div>
-
 </div>
-
 </section>
 <div class="catebox">
   <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">BEST OFFERS FOR YOU</h1></div>
-  <div class="imgbox1"> 
+  <div class="imgbox1">
   <div> <a href="#"><img src="images/newcus.jfif"></a></div>
   <div> <a href="#"><img src="images/offer.jfif"></a></div>
   <div> <a href="#"><img src="images/offer.jfif"></a></div>
