COMMITING ALL FILES ON 9 APRIL

--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -69,9 +69,8 @@
 </head> 
 <body >
 <div id="rflheader" class="flex-container">
-
 <div  id="sidenav" class="sidenav">
-<div class="container" >
+<div class="container">
   <img src="Images/Rfllogo.png" alt="RaffleBucks Logo" id="sidenavlogo">
   <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:600;background-color: transparent"></span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login</a></div> 
   <div id="regbut"><a id="butlog" type="button" href="#" >Register</a></div>
@@ -131,7 +130,7 @@
 <!--OPTIONS : USER,CART,ALERTS AND MORE OPTIONS-->
 <div id="headopt">
 <div class="tooltip" id="pos">
- <div class="header" id="usersvg"><a title="User Options" href="/Pages with Home page/Login Page/Login.html ">
+ <div class="header" id="usersvg"><a title="User Options">
     <svg id="usercolor" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
  </a></div>
   <div class="overlay1">
@@ -177,6 +176,9 @@
 </div>
 </div>
 </div>
+
+<!--THIS SECTION IS FOR THE OPTIONS IN THE MOBILE WEBISTE-->
+
 <!--THIS SECTION IS FOR THE SEARCH BAR IN MOBILE AND TABLETS /  NAVIGATION IN DESKTOP-->
 
 <div class="flex-container" id="rflnav">
@@ -685,7 +687,7 @@
           
 
 
-<script src="JS/Header.js"></script>
+<script src="JS\Header.js"></script>
 <script src="JS/Slideshow.js"></script>
 <script src="JS/midsec.js"></script>
 
