--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -478,28 +478,23 @@
     </div>
 <!--THIS IS FOR THE SLIDESHOW-->
 
-<div style="position: absolute;top: 90px;width: 100%;z-index:-1000;">
-<div class="slideshow-container" >
-<div class="containers">
-
-
-      <div class="mySlides fade">
-        <img src="images/slide7.png">
+<div class="slider-wrap">
+  <div class="slider" id="slider">
+    <div class="holder">
+      <div class="slide-wrapper">
+        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7347/8731666710_34d07e709e_z.jpg" /></div>
+        <span class="temp">74</span>
       </div>
-      <div class="mySlides fade">
-        <img src="images/slide20.png">
+      <div class="slide-wrapper">
+        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7384/8730654121_05bca33388_z.jpg" /></div>
+        <span class="temp">64</span>
       </div>
-      <div class="mySlides fade">
-        <img src="images/slide30.png">
+      <div class="slide-wrapper">
+        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7382/8732044638_9337082fc6_z.jpg" /></div>
+        <span class="temp">82</span>
       </div>
-      <div class="mySlides fade">
-        <img src="images/slide4.png">
-      </div>
-      <div class="mySlides fade">
-        <img src="images/slide20.png">
-      </div>
-      <a  onclick="plusSlides(-1)">  <div class="prev">&#10094;</div></a>
-<a  onclick="plusSlides(1)"><div class="next">&#10095;</div></a>
+    </div>
+  </div>
 </div>
 <div id="dotsty"> 
   <span class="dot" onclick="currentSlide(1)"></span>
