committing after the solving the problem

--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -71,7 +71,7 @@
 <div id="rflheader" class="flex-container">
 <div  id="sidenav" class="sidenav">
 <div class="container">
-  <img src="Images/Rfllogo.png" alt="RaffleBucks Logo" id="sidenavlogo">
+  <img src="Images/IMAGES/Rfllogo.png" alt="RaffleBucks Logo" id="sidenavlogo">
   <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:600;background-color: transparent"></span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login</a></div> 
   <div id="regbut"><a id="butlog" type="button" href="#" >Register</a></div>
 </div>
@@ -114,7 +114,7 @@
 <div id="backover"></div>
 <span  id="opensidenav"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></span>
 
-   <img src="Images/Rfllogo.png" alt="Raffle Bucks Logo" id="rfllogo">
+   <img src="Images/IMAGES/Rfllogo.png" alt="Raffle Bucks Logo" id="rfllogo">
 
 <!-- SEARCH BAR -->
 
@@ -478,24 +478,29 @@
     </div>
 <!--THIS IS FOR THE SLIDESHOW-->
 
-<div class="slider-wrap">
-  <div class="slider" id="slider">
-    <div class="holder">
-      <div class="slide-wrapper">
-        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7347/8731666710_34d07e709e_z.jpg" /></div>
-        <span class="temp">74</span>
-      </div>
-      <div class="slide-wrapper">
-        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7384/8730654121_05bca33388_z.jpg" /></div>
-        <span class="temp">64</span>
-      </div>
-      <div class="slide-wrapper">
-        <div class="slide"><img class="slide-image" src="http://farm8.staticflickr.com/7382/8732044638_9337082fc6_z.jpg" /></div>
-        <span class="temp">82</span>
-      </div>
-    </div>
+<div style="position: absolute;top: 90px;width: 100%;z-index:-1000;">
+  <div class="slideshow-container" >
+  <div class="containers">
+  
+  
+        <div class="mySlides fade">
+          <img src="images/IMAGES/slide7.png">
+        </div>
+        <div class="mySlides fade">
+          <img src="images/IMAGES/slide20.png">
+        </div>
+        <div class="mySlides fade">
+          <img src="images/IMAGES/slide30.png">
+        </div>
+        <div class="mySlides fade">
+          <img src="images/IMAGES/slide4.png">
+        </div>
+        <div class="mySlides fade">
+          <img src="images/IMAGES/slide20.png">
+        </div>
+        <a  onclick="plusSlides(-1)">  <div class="prev">&#10094;</div></a>
+  <a  onclick="plusSlides(1)"><div class="next">&#10095;</div></a>
   </div>
-</div>
 <div id="dotsty"> 
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span> 
@@ -520,10 +525,10 @@
 <div class="catebox">
   <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">BEST OFFERS FOR YOU</h1></div>
   <div class="imgbox1">
-  <div> <a href="#"><img src="images/newcus.jfif"></a></div>
-  <div> <a href="#"><img src="images/offer.jfif"></a></div>
-  <div> <a href="#"><img src="images/offer.jfif"></a></div>
-  <div> <a href="#"><img src="images/newcus.jfif"></a></div>
+  <div> <a href="#"><img src="images/IMAGES/newcus.jfif"></a></div>
+  <div> <a href="#"><img src="images/IMAGES/offer.jfif"></a></div>
+  <div> <a href="#"><img src="images/IMAGES/offer.jfif"></a></div>
+  <div> <a href="#"><img src="images/IMAGES/newcus.jfif"></a></div>
   </div>
   </div>
 
