--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -651,7 +651,11 @@
           </div>
           </div>
           <div class="banner"><a href="#"><img src="images/FASHION/JACK&.png"></a></div>
-       <footer>
+     
+     <!--     FOOTER STARTS HERE      -->
+
+
+          <footer>
          <div id="feature-heading"><h1 style="border-bottom: 2px solid black;">WE PROMISE</h1></div>
          <div id="feature-container">
            <div class="feabox">
@@ -680,8 +684,22 @@
           </div>
          </div>
        </footer>
-          
+          <div id="footerbox">
+<div class="sfootbox">
+  
+</div>
+<div>
 
+</div>
+<div>
+
+</div>
+
+          </div>
+
+
+
+<!--           FOOTER ENDS HERE!!!         -->
 
 <script src="JS\Header.js"></script>
 <script src="JS/Slideshow.js"></script>
