--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -60,10 +60,6 @@
 <link rel="stylesheet" href="CSS/footer.css">
 <link rel="stylesheet" href="CSS/MobandTab.css">
 <link rel="stylesheet" href="CSS/Navdesk.css">
-<!-- <link rel="stylesheet" href="CSS/desktopnav.css">
-<link rel="stylesheet" href="CSS/desksearchbar.css">
-<link rel="stylesheet" href="CSS/Sidenav.css">
-<link rel="stylesheet" href="CSS/Mobnav.css"> -->
 <!--CDN's-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -297,9 +293,6 @@ id="rflnav1" >
 </div>
 <!--THIS SECTION IS FOR SHOWING HIGHLIGHTS-->
 
-<section>
-
-</section>
 <div class="catebox">
   <div class="dealtitle"><h1 style="border-bottom: 2px solid black;">BEST OFFERS FOR YOU</h1></div>
   <div class="imgbox1">
@@ -431,7 +424,7 @@ id="rflnav1" >
           <div class="banner"><a href="#"><img src="images/FASHION/JACK&.png"></a></div>
      
      <!--     FOOTER STARTS HERE      -->
-<footer>
+<footer>A
      <div id="footer">
 <div id="upperbox">
 <div class="contentbox" id="knowrafflebucks">
