--- a/CART_PAGE/Cart.html
+++ b/CART_PAGE/Cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="/CSS/cart.css">
+    <link rel="stylesheet" href="/Raffle_Bucks/FRONT-END/CART_PAGE/CSS/cart.css">
 <style>
 
 
@@ -100,7 +100,7 @@
     <span>&#8377;999</span> 
  </div>
  <div class="pricebox">
-    <span> &#8377;999</span> 
+    <span id="subtotal"> &#8377;</span> 
 
     <div class="removebtn">
      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
